--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <div class="header">
+    <h1>Ricardo </h1>
+    <h2>Maker of Things</h2>
+    <div class="tagline">
+      <h3>Learn more about me</h3>
+      <p>This is a introdutory paragraph</p>
+    </div>
 
-  Welcome to the HTML Portfolio Project
+  </div>
+  <div class="skills">
+    <h3>My Skills</h3>
+    <p>Are too many to describe</p>
+    <ul>
+      <li>HTML</li>
+      <li>Skill2</li>
+      <li>Skill3</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>Drop me a line</h3>
+    <p>Not interested at this moment <a href="#">No Where</a></p>
+
+  </div>
 
 </body>
 </html>
